[gd_scene load_steps=6 format=3 uid="uid://baowy5cj3cdai"]

[ext_resource type="Script" path="res://scene/menus/savegame.gd" id="1_fbawy"]
[ext_resource type="PackedScene" uid="uid://smav7ilugg5n" path="res://scene/shaders/blur.tscn" id="2_5il62"]
[ext_resource type="Texture2D" uid="uid://c6btc2rmfyn1t" path="res://assets/graphics/black_backdrop.png" id="3_vx4ic"]
[ext_resource type="Texture2D" uid="uid://deurn74t2qrfh" path="res://assets/graphics/background/hallway.jpg" id="4_baw3h"]

[sub_resource type="Theme" id="Theme_ku0iw"]
ItemList/constants/v_separation = 11

[node name="SaveGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fbawy")

[node name="Blur" parent="." instance=ExtResource("2_5il62")]
visible = false
layout_mode = 1

[node name="BlackBackdrop" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("3_vx4ic")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 34.0
offset_top = -225.0
offset_right = 834.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0.588235)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 346.5
offset_top = -194.0
offset_right = 521.5
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Save Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveList" type="ItemList" parent="."]
layout_mode = 0
offset_left = 1048.0
offset_top = 408.0
offset_right = 1304.0
offset_bottom = 684.0
theme = SubResource("Theme_ku0iw")
theme_override_font_sizes/font_size = 48
text_overrun_behavior = 0
item_count = 3
item_0/text = "Save File 1"
item_0/disabled = true
item_1/text = "Save File 2"
item_1/disabled = true
item_2/text = "Save File 3"
item_2/disabled = true

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 411.5
offset_top = 160.5
offset_right = 456.5
offset_bottom = 191.5
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="SaveImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1392.0
offset_top = 408.0
offset_right = 1704.0
offset_bottom = 584.0
texture = ExtResource("4_baw3h")
expand_mode = 2
stretch_mode = 4

[node name="TPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1392.5
offset_top = 608.0
offset_right = 1495.5
offset_bottom = 634.0
text = "Time Played: "
uppercase = true

[node name="LLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1392.5
offset_top = 648.0
offset_right = 1486.5
offset_bottom = 674.0
text = "Location: "
uppercase = true

[node name="TimePlayed" type="Label" parent="."]
layout_mode = 0
offset_left = 1520.5
offset_top = 608.0
offset_right = 1623.5
offset_bottom = 634.0
text = "00:00:00"

[node name="Location" type="Label" parent="."]
layout_mode = 0
offset_left = 1520.5
offset_top = 648.0
offset_right = 1623.5
offset_bottom = 674.0
text = "Bedroom"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
